--- a/fronted-admin/src/app/pages/categories/categories.component.html
+++ b/fronted-admin/src/app/pages/categories/categories.component.html
@@ -1,3 +1,10 @@
 <div>
     <h2>Categorias</h2>
 </div>
+<div (click)="toggleForm()">
+    <button>Agregar</button>
+    
+</div>
+<app-category-form *ngIf="showForm" (formClosed)="toggleForm()" (categoryAdded)="onCategoryAdded()"></app-category-form>
+<app-category-list #categoryList></app-category-list>
+
