--- a/fronted/src/app/pages/home/home.component.html
+++ b/fronted/src/app/pages/home/home.component.html
@@ -1,7 +1,7 @@
 <div class="home">
     <section class="hero">
         <div class="hero-content-wrapper">
-            <h2>Un lugar donde puedes econtras productos de calidad</h2>
+            <h2>Distribuciones Adisan un lugar donde puedes encontrar productos de calidad</h2>
             <div class="cards-container">
                 <div class="cards-item">
                     <img src="assets/images/image2.png" alt="" srcset="">
