--- a/fronted-admin/src/app/components/category-form/category-form.component.html
+++ b/fronted-admin/src/app/components/category-form/category-form.component.html
@@ -1,1 +1,19 @@
-<p>category-form works!</p>
+<div class="overlay" (click)="onOverlayClick($event)">
+    <div class="product-form-container">
+        <div class="form-card">
+            <h2 class="form-title">Crear nueva categoria</h2>
+            <form [formGroup]="categoryForm" (ngSubmit)="onSubmit()">
+                <div class="form-group">
+                    <label for="name" class="form-label">Nombre categoria *</label>
+                    <input type="text" id="name" formControlName="name" class="form-input">
+                    <div *ngIf="name?.valid && name?.touched" class="error-message">
+                        <small *ngIf="name?.errors?.['required']">Nombre de la categoria es requerido</small>
+                    </div>
+                </div>
+                <div class="form-actions">
+                    <button type="submit" class="btn btn-primary"  [disabled]="categoryForm.invalid">Enviar</button>
+                </div>
+            </form>
+        </div>
+    </div>
+</div>
