--- a/fronted-admin/src/app/shared/components/sidebar/sidebar.component.css
+++ b/fronted-admin/src/app/shared/components/sidebar/sidebar.component.css
@@ -5,6 +5,7 @@
     border-radius: 10px;
     padding: 20px 20px;
     box-shadow: 0px 10px 15px -3px rgba(0,0,0,0.1);
+    background-color: #ffff;
 }
 
 .sidebar-option {
