--- a/fronted-admin/src/app/app.component.css
+++ b/fronted-admin/src/app/app.component.css
@@ -4,9 +4,10 @@
 
 .body-options {
     width: 100%;
-    border: 1px solid rgba(235, 235, 235, 0.822);
+    /* border: 1px solid rgba(235, 235, 235, 0.822); */
     border-radius: 10px;
     margin: 0px 0px 0px 20px;
     padding: 0px 0px 0px 20px;
-    background-color: #fff;
+    /* background-color: #fff; */
 }
+
