--- a/fronted-admin/src/app/components/product-form/product-form.component.css
+++ b/fronted-admin/src/app/components/product-form/product-form.component.css
@@ -24,6 +24,8 @@
 
 .form-card {
   background: white;
+  max-height: 880px;
+ 
   border-radius: 12px;
   padding: 2rem;
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
@@ -90,6 +92,7 @@
   background-color: #f9fafb;
   cursor: pointer;
   transition: border-color 0.2s, background-color 0.2s;
+  box-sizing: border-box;
 }
 
 .form-file-input:hover {
@@ -118,8 +121,9 @@
 }
 
 .preview-image {
-  max-width: 200px;
-  max-height: 200px;
+  width: 100px;
+  height: 100px;
+  
   border-radius: 8px;
   border: 1px solid #d1d5db;
   object-fit: cover;
@@ -177,6 +181,12 @@
   border-top: 2px solid currentColor;
   border-radius: 50%;
   animation: spin 1s linear infinite;
+}
+
+.image-input{
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
 }
 
 @keyframes spin {
