--- a/fronted-admin/src/app/pages/orders/orders.component.html
+++ b/fronted-admin/src/app/pages/orders/orders.component.html
@@ -2,7 +2,7 @@
     <div class="section-header">
         <h2>Órdenes</h2>
     </div>
-    
+
     <div class="orders-layout">
         <div class="orders-history">
             <div class="orders-history-header">
@@ -10,18 +10,68 @@
             </div>
             <div class="orders-history-list">
                 <div class="order-item">
-                    <!-- Individual order item -->
+                    <div class="order-header">
+                        <span class="order-id text-bold">#839291t2</span>
+                        <span class="order-status">Pendiente</span>
+                    </div>
+                    <div class="order-item-details">
+                        <span class="order-amount text-bold">PEN S/43</span>
+                        <span class="order-date text-secondary">May 1 at 7:00PM</span>
+                    </div>
+                    <div class="total-items">
+                        <span class="text-secondary">7 items</span>
+                    </div>
+                </div>
+                <div class="order-item">
+                    <div class="order-header">
+                        <span class="order-id text-bold">#839291t2</span>
+                        <span class="order-status">Pendiente</span>
+                    </div>
+                    <div class="order-item-details">
+                        <span class="order-amount text-bold">PEN S/43</span>
+                        <span class="order-date text-secondary">May 1 at 7:00PM</span>
+                    </div>
+                    <div class="total-items">
+                        <span class="text-secondary">7 items</span>
+                    </div>
                 </div>
             </div>
         </div>
 
         <div class="order-details">
             <div class="order-details-header">
-                <h2>Detalles de Orden</h2>
+                <h2>Orden #839291t2<span class="text-secondary">(4)</span></h2>
             </div>
             <div class="order-details-content">
-                <div class="order-detail-item">
-                    <!-- Detailed view of selected order -->
+                <div class="order-detail-item d-flex">
+                    <img class="product-image" src="https://daywi.com.pe/wp-content/uploads/2023/07/cielo-20l.webp" alt="Imagen de Producto 1">
+                    <div class="product-info">
+                        <div class="product-header text-bold">
+                            <span class="product-name">Producto 1</span>
+                            <span class="product-price">PEN S/4.00</span>
+                        </div>
+                        <div class="product-description">
+                            Producto 1 de buena calidad
+                        </div>
+                        <div class="total-items">
+                            <span class="text-secondary">7 items</span>
+                        </div>
+                    </div>
+                </div>
+                <div class="order-detail-item d-flex">
+                    <img class="product-image" src="https://daywi.com.pe/wp-content/uploads/2023/07/SPORADE-MANDARINA-PET-NO-RETORNABLE-500-ML-X-12.webp" alt="Imagen de Producto 1">
+                    <div class="product-info">
+                        <div class="product-header text-bold">
+                            <span class="product-name">Producto 1</span>
+                            <span class="product-price">PEN S/4.00</span>
+                        </div>
+                        <div class="product-description">
+                            Producto 1 de buena calidad
+                        </div>
+                        <div class="total-items">
+                            <span class="text-secondary">7 items</span>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
