--- a/fronted/src/app/pages/shop/shop.component.css
+++ b/fronted/src/app/pages/shop/shop.component.css
@@ -32,7 +32,8 @@
 
  .products-grid {
      display: grid;
-     grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
+     grid-template-columns: repeat(auto-fit, minmax(290px, 1fr));
+     grid-template-rows: 450px;
      gap: 24px;
      max-width: 1200px;
 
