--- a/fronted/src/app/pages/cart/cart.component.css
+++ b/fronted/src/app/pages/cart/cart.component.css
@@ -188,20 +188,32 @@
      margin-bottom: 15px;
  }
 
- .promo-input-group {
-     display: flex;
-     gap: 10px;
- }
 
- .promo-input {
-     flex: 1;
+
+ .promo-input-group input,
+ .promo-input-group select {
+     width: 100%;
      padding: 12px;
      border: 1px solid #d2d2d7;
      border-radius: 8px;
      font-size: 14px;
      outline: none;
      transition: border-color 0.2s ease;
+     display: block;
+     box-sizing: border-box;
  }
+
+ .promo-input-group label {
+     font-weight: bold;
+     margin-top: 15px;
+     display: block;
+     font-size: 14px;
+ }
+  .promo-input-group .description{
+     font-size: 12px;
+     color: #555;
+     margin-top: 4px;
+  }
 
  .promo-input:focus {
      border-color: #007aff;
