--- a/fronted/src/styles.css
+++ b/fronted/src/styles.css
@@ -1,9 +1,21 @@
 
-html, button, input {
+html, button, input, select {
    font-family: "Host Grotesk", sans-serif;
 }
 
 a {
    text-decoration: none;
    color: black;
+}
+
+.text-bold{
+    font-weight: bold;
+}
+
+.text-secondary{
+    color: #5f5f5f;
+}
+
+.d-flex{
+    display: flex;
 }
