--- a/fronted-admin/src/app/pages/products/products.component.html
+++ b/fronted-admin/src/app/pages/products/products.component.html
@@ -1,7 +1,7 @@
 <div>
     <h2 class="section-title">Productos</h2>
     <button class="show-form-btn" (click)="toggleForm()">
-        {{ showForm ? 'Hide Form' : 'Show Form' }}
+        {{ showForm ? 'Hide Form' : 'Añadir Producto' }}
     </button>
     <app-product-form 
         *ngIf="showForm"
