--- a/fronted/src/app/pages/user/user.component.html
+++ b/fronted/src/app/pages/user/user.component.html
@@ -10,10 +10,16 @@
             </div>
             <div class="orders-history-list">
                 @for (item of userOrders; track item.id) {
-                <div class="order-item" (click)="loadOrderItems( item.id || '')">
+                <div class="order-item" (click)="loadOrderItems(item)">
                     <div class="order-header">
                         <span class="order-id text-bold">#{{item.id}}</span>
-                        <span class="order-status">{{item.status}}</span>
+                        <span [ngClass]="{
+                            'badge-success': item.status === 'entregado',
+                            'badge-pending': item.status === 'pendiente',
+                            'badge-canceled': item.status === 'cancelado'}" 
+                            class="order-status badge">
+                            {{ item.status }}
+                        </span>
                     </div>
                     <div class="order-item-details">
                         <span class="order-amount text-bold">PEN S/{{item.precioTotal}}</span>
@@ -22,6 +28,7 @@
                     </div>
                     <div class="total-items">
                         <span class="text-secondary">{{item.totalItems}} items</span>
+                        
                     </div>
                 </div>
                 }
@@ -30,7 +37,7 @@
 
         <div class="order-details">
             <div class="order-details-header">
-                <h2>Orden #839291t2<span class="text-secondary">(4)</span></h2>
+                <h2>Orden #{{selectedOrder?.id}}<span class="text-secondary">({{selectedOrder?.totalItems}})</span></h2>
             </div>
             <div class="order-details-content">
                 
